# docs/swagger.json
@@ -88,7 +88,7 @@
                     "200": {
                         "description": "Successfully logged out",
                         "schema": {
-                            "type": "string"
+                            "type": "boolean"
                         }
                     },
                     "400": {
@@ -200,7 +200,7 @@
         },
         "/polls": {
             "get": {
-                "description": "Retrieves a paginated list of polls.",
+                "description": "Retrieves a paginated list of polls and specifies whether to show only active polls. The filter parameter is used to search for polls by title or description.",
                 "consumes": [
                     "application/json"
                 ],
@@ -258,7 +258,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Create a new poll with a title, expiration time, and categories. The user must be authenticated.",
+                "description": "Create a new poll in the system.",
                 "consumes": [
                     "application/json"
                 ],
@@ -288,19 +288,13 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request - Invalid input",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing token",
+                        "description": "4xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "5xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
@@ -315,7 +309,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Retrieves polls for the given user ID. Requires authentication.",
+                "description": "Retrieves polls created by a specific user, with pagination and optional filter. The filter parameter is used to search for polls by title or description. The show_active_only parameter is used to show only active polls.",
                 "consumes": [
                     "application/json"
                 ],
@@ -367,25 +361,13 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request - Invalid user ID",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing token",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "404": {
-                        "description": "User not found",
+                        "description": "4xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "5xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
@@ -400,7 +382,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Retrieve a specific poll by its ID. Requires authentication.",
+                "description": "Retrieve a specific poll by its ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -428,25 +410,13 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request - Invalid input",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing token",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "404": {
-                        "description": "Poll not found",
+                        "description": "4xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "5xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
@@ -496,19 +466,13 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request - Invalid input",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing authentication",
+                        "description": "4xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "5xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
@@ -521,7 +485,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Delete a poll by providing the poll ID in the route. The user must be authenticated.",
+                "description": "Soft-Delete a poll by providing the poll ID in the route. You need to be the poll owner to delete it.",
                 "consumes": [
                     "application/json"
                 ],
@@ -549,25 +513,13 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request - Invalid input",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing token",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "404": {
-                        "description": "Poll not found",
+                        "description": "4xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "5xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
@@ -582,7 +534,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "End a poll by providing the poll ID in the route. The user must be authenticated.",
+                "description": "Mark the poll ended by providing the poll ID in the route. In order to end a poll, you need to be the poll owner.",
                 "consumes": [
                     "application/json"
                 ],
@@ -610,25 +562,13 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request - Invalid input",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing token",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "404": {
-                        "description": "Poll not found",
+                        "description": "4xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "5xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
@@ -643,7 +583,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Add a vote to a specific poll category by providing the poll ID in the route and the category ID in the request body. The user must be authenticated.",
+                "description": "Cast a vote to a specific poll category by providing the poll ID in the route and the category ID in the request body.",
                 "consumes": [
                     "application/json"
                 ],
@@ -674,31 +614,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Vote added successfully",
+                        "description": "Vote cast successful",
                         "schema": {
                             "type": "boolean"
                         }
                     },
                     "400": {
-                        "description": "Bad Request - Invalid input",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid or missing token",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ErrorCode"
-                        }
-                    },
-                    "404": {
-                        "description": "Poll or category not found",
+                        "description": "4xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "5xx Errors",
                         "schema": {
                             "$ref": "#/definitions/utility.ErrorCode"
                         }
@@ -886,6 +814,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "isEnded": {
+                    "type": "boolean"
                 },
                 "title": {
                     "type": "string"
